# romio

./: .gitignore  .gitmodules  Makefile  Manifest.toml  PROGRESS.md  Project.toml  README.md  analyze_1729_input.jl  analyze_branch_32d5.jl  analyze_fault.jl  analyze_loads.jl  analyze_loop.jl  analyze_step_956.jl  analyze_step_957.jl  analyze_step_968.jl  analyze_step_977.jl  analyze_step_978.jl  check_4789.jl  check_input.jl  check_jump_table.jl  check_memory_access.jl  check_memory_layout.jl  check_offset_14c2.jl  check_panic.jl  check_ro_data.jl  check_ro_data_910.jl  check_rw_data.jl  check_service_1729.jl  decode_branch.jl  decode_branch2.jl  decode_branch_970.jl  decode_loop_instrs.jl  decode_ops.jl  decode_panic.jl  decode_pc_47c0.jl  decode_step_237.jl  decode_step_248.jl  decode_step_978.jl  extract_blob.jl  find_ecalli.jl  (+48 more)
.github/workflows/: ci.yml  release.yml
blc-client/: Cargo.toml  index.html
blc-client/src/: blc.rs  jam.rs  lib.rs  main.rs  wasm.rs  work_package.rs
corevm-guests/blc-vm/: Cargo.toml
corevm-guests/blc-vm/.cargo/: config.toml
corevm-guests/blc-vm/src/: lib.rs
docs/: doom.md  final_status.md  optimization_report.md  optimization_summary.md  phase_2_complete.md  service-deployment.md  services.md  test_4_investigation.md  test_status.md
scripts/: bench_bf.jl  bench_bf_ffi.jl  bench_pvm.jl  bench_pvm_ffi.jl  demo-blc.sh  deploy-service.sh  fetch-jamt.sh  install-jamt.sh  profile_pvm.jl  run-blc-service.sh  run-testnet.sh
src/: JAM.jl  constants.jl  main.jl
src/availability/: builder.jl  erasure.jl
src/blc/: blc.jl  blc_service.jl
src/blocks/: blocks.jl  extrinsic.jl  header.jl
src/codec/: codec.jl  complex.jl  decoder.jl
src/conformance/: target.jl
src/consensus/: best_chain.jl  grandpa.jl  production.jl  safrole.jl
src/corevm/: fs.jl
src/crypto/: bandersnatch.jl  bls.jl  ed25519.jl  ed25519_helper.py  erasure.jl  hash.jl  keccak256.jl  key_derivation.jl  mmr.jl  vrf_helper.py
src/encoding/: jam.jl  scale.jl
src/network/: jamnps.jl  network.jl  quic_connection.jl  sync.jl
src/pvm/: corevm_extension.jl  debug.jl  debug_test.jl  doom_ffi_sdl.jl  doom_frames.jl  doom_julia.jl  doom_sdl.jl  engine.jl  example_usage.jl  host_calls.jl  interpreter.jl  invocation.jl  jit_compiler.jl  polkavm_blob.jl  polkavm_ffi.jl  pvm.jl  pvm_parser.jl  pvm_test.jl  regmap.jl  (+14 more)
test/: actual_protocol_tests.jl  codec_tests.jl  compare_encoding.jl  debug_encoding.jl  debug_super_peak.jl  final_encoding.jl  fixed_encoding.jl  full_test_summary.jl  implementation_test.jl  precompile_exec.jl  precompile_pvm.jl  reality_check.jl  run_all_parallel.jl  run_test_vectors.jl  runtests.jl  simple_length_encoding.jl  simple_stf_tests.jl  stf_tests.jl  test_bls.jl  test_codec.jl  test_hash.jl  test_integration.jl  test_performance.jl  test_pvm_compliance.jl  test_serialization_roundtrip.jl  test_transitions.jl  test_vectors.jl
(+67 files in other folders)
