[package]
name = "blc-client"
version = "0.1.0"
edition = "2021"
description = "BLC (Binary Lambda Calculus) client for JAM CoreVM services"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["tokio", "tokio-tungstenite"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys", "gloo-net", "serde-wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
blake2 = "0.10"
base64 = "0.21"

# native websocket
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

# wasm
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-net = { version = "0.5", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
